--- a/.gitignore
+++ b/.gitignore
@@ -48,4 +48,5 @@ Network Trash Folder
 Temporary Items
 /VueDjangoFrameWorkShop/local_settings.py
 /VueDjangoFrameWorkShop/dev_settings.py
-/trade/keys
+/trade/keystestvir/ 
+testvir/ 
