--- a/requirements.txt
+++ b/requirements.txt
@@ -1,40 +1,7 @@
-certifi
-chardet
-coreapi
-coreschema
-diff-match-patch
-Django
-django-cors-headers
-django-crispy-forms
-django-filter
-django-formtools
-django-guardian
-django-import-export
-django-reversion
-djangorestframework
-djangorestframework-jwt
-et-xmlfile
-future
-httplib2
-idna
-itypes
-jdcal
-Jinja2
-Markdown
-MarkupSafe
-mysqlclient
-odfpy
-openpyxl
-Pillow
-PyJWT
-pytz
-PyYAML
-requests
-six
-tablib
-unicodecsv
-uritemplate
-urllib3
-xlrd
-XlsxWriter
-xlwt
+
+Django==2.0.7
+django-ranged-response==0.2.0
+django-simple-captcha==0.5.9
+Pillow==5.2.0
+pytz==2018.5
+six==1.11.0
